--- a/prepros.config
+++ b/prepros.config
@@ -102,13 +102,13 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1637934377143.0723,
-          "date": "2021-11-26T13:46:56.566Z"
+          "mtimeMs": 1638019218936.7046,
+          "date": "2021-11-27T13:30:19.119Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1637934400661.02,
-          "date": "2021-11-26T13:46:57.707Z"
+          "mtimeMs": 1638018238946.1772,
+          "date": "2021-11-27T13:13:12.711Z"
         },
         {
           "file": "fonts/Philosopher.eot",
@@ -141,254 +141,294 @@
           "date": "2021-11-26T13:47:06.868Z"
         },
         {
-          "file": "img/logo.png",
-          "mtimeMs": 1606305683022.4316,
-          "date": "2021-11-26T13:47:08.357Z"
-        },
-        {
           "file": "img/backs/main.jpg",
-          "mtimeMs": 1637915234898.1755,
-          "date": "2021-11-26T13:47:09.808Z"
+          "mtimeMs": 1638018340925.6067,
+          "date": "2021-11-27T13:13:17.301Z"
         },
         {
           "file": "img/certs/cert-1.jpg",
-          "mtimeMs": 1637915618252.777,
-          "date": "2021-11-26T13:47:11.668Z"
+          "mtimeMs": 1638018496408.1047,
+          "date": "2021-11-27T13:13:18.183Z"
         },
         {
           "file": "img/certs/cert-10.jpg",
-          "mtimeMs": 1637915703127.1868,
-          "date": "2021-11-26T13:47:12.998Z"
+          "mtimeMs": 1638018536311.3792,
+          "date": "2021-11-27T13:13:18.867Z"
         },
         {
           "file": "img/certs/cert-11.jpg",
-          "mtimeMs": 1637915710445.9233,
-          "date": "2021-11-26T13:47:13.927Z"
+          "mtimeMs": 1638018543473.1514,
+          "date": "2021-11-27T13:13:19.704Z"
         },
         {
           "file": "img/certs/cert-12.jpg",
-          "mtimeMs": 1637915716265.9177,
-          "date": "2021-11-26T13:47:15.500Z"
+          "mtimeMs": 1638018548464.9817,
+          "date": "2021-11-27T13:13:20.342Z"
         },
         {
           "file": "img/certs/cert-13.jpg",
-          "mtimeMs": 1637915722209.9153,
-          "date": "2021-11-26T13:47:17.503Z"
+          "mtimeMs": 1638018553755.916,
+          "date": "2021-11-27T13:13:21.102Z"
         },
         {
           "file": "img/certs/cert-14.jpg",
-          "mtimeMs": 1637915729977.95,
-          "date": "2021-11-26T13:47:19.163Z"
+          "mtimeMs": 1638018558797.2551,
+          "date": "2021-11-27T13:13:21.897Z"
         },
         {
           "file": "img/certs/cert-2.jpg",
-          "mtimeMs": 1637915628885.0798,
-          "date": "2021-11-26T13:47:21.716Z"
-        },
-        {
-          "file": "img/certs/cert-3.png",
-          "mtimeMs": 1637915642291.8672,
-          "date": "2021-11-26T13:47:26.549Z"
+          "mtimeMs": 1638018499841.6702,
+          "date": "2021-11-27T13:13:22.565Z"
         },
         {
           "file": "img/certs/cert-4.jpg",
-          "mtimeMs": 1637915651568.4568,
-          "date": "2021-11-26T13:47:27.643Z"
+          "mtimeMs": 1638018507400.4067,
+          "date": "2021-11-27T13:13:25.409Z"
         },
         {
           "file": "img/certs/cert-5.jpg",
-          "mtimeMs": 1637915662854.595,
-          "date": "2021-11-26T13:47:29.041Z"
+          "mtimeMs": 1638018511458.6216,
+          "date": "2021-11-27T13:13:26.064Z"
         },
         {
           "file": "img/certs/cert-6.jpg",
-          "mtimeMs": 1637915673812.7415,
-          "date": "2021-11-26T13:47:31.024Z"
+          "mtimeMs": 1638018517104.5027,
+          "date": "2021-11-27T13:13:26.977Z"
         },
         {
           "file": "img/certs/cert-7.jpg",
-          "mtimeMs": 1637915684173.5605,
-          "date": "2021-11-26T13:47:33.762Z"
+          "mtimeMs": 1638018520764.531,
+          "date": "2021-11-27T13:13:27.584Z"
         },
         {
           "file": "img/certs/cert-8.jpg",
-          "mtimeMs": 1637915690715.3567,
-          "date": "2021-11-26T13:47:36.108Z"
+          "mtimeMs": 1638018525374.25,
+          "date": "2021-11-27T13:13:28.524Z"
         },
         {
           "file": "img/certs/cert-9.jpg",
-          "mtimeMs": 1637915696934.3762,
-          "date": "2021-11-26T13:47:37.361Z"
+          "mtimeMs": 1638018530639.224,
+          "date": "2021-11-27T13:13:29.330Z"
         },
         {
           "file": "img/certs/photo-1.jpg",
-          "mtimeMs": 1637915827548.5166,
-          "date": "2021-11-26T13:47:39.283Z"
+          "mtimeMs": 1638018568255.233,
+          "date": "2021-11-27T13:13:30.045Z"
         },
         {
           "file": "img/certs/photo-10.jpg",
-          "mtimeMs": 1637915995801.592,
-          "date": "2021-11-26T13:47:41.430Z"
+          "mtimeMs": 1638018647129.2385,
+          "date": "2021-11-27T13:13:30.900Z"
         },
         {
           "file": "img/certs/photo-11.jpg",
-          "mtimeMs": 1637916007204.0464,
-          "date": "2021-11-26T13:47:42.537Z"
+          "mtimeMs": 1638018652485.6758,
+          "date": "2021-11-27T13:13:31.787Z"
         },
         {
           "file": "img/certs/photo-12.jpg",
-          "mtimeMs": 1637916020636.2473,
-          "date": "2021-11-26T13:47:43.597Z"
+          "mtimeMs": 1638018662789.178,
+          "date": "2021-11-27T13:13:32.938Z"
         },
         {
           "file": "img/certs/photo-13.jpg",
-          "mtimeMs": 1637916032190.759,
-          "date": "2021-11-26T13:47:45.235Z"
+          "mtimeMs": 1638018669166.6677,
+          "date": "2021-11-27T13:13:33.867Z"
         },
         {
           "file": "img/certs/photo-14.jpg",
-          "mtimeMs": 1637916042587.4224,
-          "date": "2021-11-26T13:47:46.406Z"
+          "mtimeMs": 1638018674988.4597,
+          "date": "2021-11-27T13:13:34.507Z"
         },
         {
           "file": "img/certs/photo-15.jpg",
-          "mtimeMs": 1637916057332.3064,
-          "date": "2021-11-26T13:47:47.486Z"
+          "mtimeMs": 1638018728959.3062,
+          "date": "2021-11-27T13:13:35.437Z"
         },
         {
           "file": "img/certs/photo-16.jpg",
-          "mtimeMs": 1637916070194.422,
-          "date": "2021-11-26T13:47:48.468Z"
+          "mtimeMs": 1638018733842.3525,
+          "date": "2021-11-27T13:13:36.846Z"
         },
         {
           "file": "img/certs/photo-17.jpg",
-          "mtimeMs": 1637916081038.9268,
-          "date": "2021-11-26T13:47:49.274Z"
+          "mtimeMs": 1638018741337.6392,
+          "date": "2021-11-27T13:13:37.541Z"
         },
         {
           "file": "img/certs/photo-18.jpg",
-          "mtimeMs": 1637916093957.272,
-          "date": "2021-11-26T13:47:51.063Z"
+          "mtimeMs": 1638018746102.9795,
+          "date": "2021-11-27T13:13:38.142Z"
         },
         {
           "file": "img/certs/photo-19.jpg",
-          "mtimeMs": 1637916104413.2524,
-          "date": "2021-11-26T13:47:53.830Z"
+          "mtimeMs": 1638018751212.0015,
+          "date": "2021-11-27T13:13:38.863Z"
         },
         {
           "file": "img/certs/photo-2.jpg",
-          "mtimeMs": 1637915840660.2742,
-          "date": "2021-11-26T13:47:57.418Z"
+          "mtimeMs": 1638018576936.6306,
+          "date": "2021-11-27T13:13:39.701Z"
         },
         {
           "file": "img/certs/photo-20.jpg",
-          "mtimeMs": 1637916115199.577,
-          "date": "2021-11-26T13:47:59.706Z"
+          "mtimeMs": 1638018756102.219,
+          "date": "2021-11-27T13:13:40.416Z"
         },
         {
           "file": "img/certs/photo-21.jpg",
-          "mtimeMs": 1637916128266.345,
-          "date": "2021-11-26T13:48:01.273Z"
+          "mtimeMs": 1638018762526.978,
+          "date": "2021-11-27T13:13:41.077Z"
         },
         {
           "file": "img/certs/photo-22.jpg",
-          "mtimeMs": 1637916139965.4048,
-          "date": "2021-11-26T13:48:05.747Z"
+          "mtimeMs": 1638018769085.5276,
+          "date": "2021-11-27T13:13:41.948Z"
         },
         {
           "file": "img/certs/photo-3.jpg",
-          "mtimeMs": 1637915851221.5713,
-          "date": "2021-11-26T13:48:06.760Z"
+          "mtimeMs": 1638018581832.2273,
+          "date": "2021-11-27T13:13:42.538Z"
         },
         {
           "file": "img/certs/photo-4.jpg",
-          "mtimeMs": 1637915912787.576,
-          "date": "2021-11-26T13:48:08.468Z"
+          "mtimeMs": 1638018586218.0505,
+          "date": "2021-11-27T13:13:43.503Z"
         },
         {
           "file": "img/certs/photo-5.jpg",
-          "mtimeMs": 1637915923855.2874,
-          "date": "2021-11-26T13:48:10.361Z"
+          "mtimeMs": 1638018590427.2969,
+          "date": "2021-11-27T13:13:44.156Z"
         },
         {
           "file": "img/certs/photo-6.jpg",
-          "mtimeMs": 1637915939128.0388,
-          "date": "2021-11-26T13:48:11.440Z"
+          "mtimeMs": 1638018596456.6924,
+          "date": "2021-11-27T13:13:45.072Z"
         },
         {
           "file": "img/certs/photo-7.jpg",
-          "mtimeMs": 1637915950992.8953,
-          "date": "2021-11-26T13:48:13.098Z"
+          "mtimeMs": 1638018633682.4172,
+          "date": "2021-11-27T13:13:45.800Z"
         },
         {
           "file": "img/certs/photo-8.jpg",
-          "mtimeMs": 1637915961255.1206,
-          "date": "2021-11-26T13:48:14.907Z"
+          "mtimeMs": 1638018637592.6008,
+          "date": "2021-11-27T13:13:46.871Z"
         },
         {
           "file": "img/certs/photo-9.jpg",
-          "mtimeMs": 1637915983455.537,
-          "date": "2021-11-26T13:48:15.909Z"
+          "mtimeMs": 1638018642894.619,
+          "date": "2021-11-27T13:13:47.581Z"
         },
         {
           "file": "img/icons/can-1.png",
-          "mtimeMs": 1637915323282.5806,
-          "date": "2021-11-26T13:48:16.808Z"
+          "mtimeMs": 1638018399764.3608,
+          "date": "2021-11-27T13:13:48.229Z"
         },
         {
           "file": "img/icons/can-2.png",
-          "mtimeMs": 1637915335503.7031,
-          "date": "2021-11-26T13:48:17.873Z"
+          "mtimeMs": 1638018394736.6724,
+          "date": "2021-11-27T13:13:48.823Z"
         },
         {
           "file": "img/icons/can-3.png",
-          "mtimeMs": 1637915346640.9026,
-          "date": "2021-11-26T13:48:19.356Z"
+          "mtimeMs": 1638018404571.4807,
+          "date": "2021-11-27T13:13:49.694Z"
         },
         {
           "file": "img/icons/can-4.png",
-          "mtimeMs": 1637915357128.7642,
-          "date": "2021-11-26T13:48:20.419Z"
+          "mtimeMs": 1638018381668.864,
+          "date": "2021-11-27T13:13:50.873Z"
         },
         {
           "file": "img/icons/can-5.png",
-          "mtimeMs": 1637915368240.038,
-          "date": "2021-11-26T13:48:21.663Z"
+          "mtimeMs": 1638018376118.2744,
+          "date": "2021-11-27T13:13:51.492Z"
         },
         {
           "file": "img/icons/can-6.png",
-          "mtimeMs": 1637915378022.787,
-          "date": "2021-11-26T13:48:23.301Z"
-        },
-        {
-          "file": "img/icons/insta.ico",
-          "mtimeMs": 1637915535683.944,
-          "date": "2021-11-26T13:48:24.281Z"
+          "mtimeMs": 1638018370791.9756,
+          "date": "2021-11-27T13:13:52.108Z"
         },
         {
           "file": "img/images/about.png",
-          "mtimeMs": 1637915295410.6863,
-          "date": "2021-11-26T13:48:26.491Z"
-        },
-        {
-          "file": "img/images/hggh.png",
-          "mtimeMs": 1637915469924.7695,
-          "date": "2021-11-26T13:48:28.958Z"
+          "mtimeMs": 1638018424853.7407,
+          "date": "2021-11-27T13:13:54.537Z"
         },
         {
           "file": "img/images/tamara.jpg",
-          "mtimeMs": 1637915516430.9988,
-          "date": "2021-11-26T13:48:31.151Z"
+          "mtimeMs": 1638018433490.5977,
+          "date": "2021-11-27T13:13:56.838Z"
         },
         {
           "file": "js/libs.min.js",
-          "mtimeMs": 1637913815388.728,
-          "date": "2021-11-26T13:48:32.089Z"
+          "mtimeMs": 1638009939555.2778,
+          "date": "2021-11-27T13:13:57.570Z"
         },
         {
           "file": "js/scripts.js",
-          "mtimeMs": 1637913821359.965,
-          "date": "2021-11-26T13:48:32.883Z"
+          "mtimeMs": 1638020513464.177,
+          "date": "2021-11-27T13:42:00.721Z"
+        },
+        {
+          "file": "fonts/Benefice.svg",
+          "mtimeMs": 1637977240000,
+          "date": "2021-11-27T13:13:13.874Z"
+        },
+        {
+          "file": "fonts/Benefice.ttf",
+          "mtimeMs": 1637977240000,
+          "date": "2021-11-27T13:13:14.528Z"
+        },
+        {
+          "file": "fonts/Benefice.woff",
+          "mtimeMs": 1637977240000,
+          "date": "2021-11-27T13:13:15.124Z"
+        },
+        {
+          "file": "fonts/Benefice.woff2",
+          "mtimeMs": 1637977240000,
+          "date": "2021-11-27T13:13:15.694Z"
+        },
+        {
+          "file": "img/certs/cert-3.jpg",
+          "mtimeMs": 1638018503488.5444,
+          "date": "2021-11-27T13:13:23.408Z"
+        },
+        {
+          "file": "img/icons/insta.png",
+          "mtimeMs": 1638018365759.7021,
+          "date": "2021-11-27T13:13:53.580Z"
+        },
+        {
+          "file": "img/images/grey-line.png",
+          "mtimeMs": 1638018429814.163,
+          "date": "2021-11-27T13:13:55.603Z"
+        },
+        {
+          "file": ".htaccess",
+          "mtimeMs": 1638019094318.628,
+          "date": "2021-11-27T13:18:19.161Z"
+        },
+        {
+          "file": "fonts/Benefice.eot",
+          "mtimeMs": 1637977240000,
+          "date": "2021-11-27T13:18:19.854Z"
+        },
+        {
+          "file": "404/index.html",
+          "mtimeMs": 1638019476246.825,
+          "date": "2021-11-27T13:30:19.689Z"
+        },
+        {
+          "file": "css/404.min.css",
+          "mtimeMs": 1638019808828.7,
+          "date": "2021-11-27T13:30:20.544Z"
+        },
+        {
+          "file": "css/ie.min.css",
+          "mtimeMs": 1638020232335.521,
+          "date": "2021-11-27T13:42:00.193Z"
         }
       ]
     },
@@ -1226,6 +1266,12 @@
     },
     "files": [
       {
+        "file": "_app/404.pug",
+        "config": {
+          "customOutput": "404\\index.html"
+        }
+      },
+      {
         "file": "_app/_js/libs.js",
         "config": {
           "autoCompile": true,
@@ -1248,6 +1294,18 @@
         "file": "_app/index.pug",
         "config": {
           "customOutput": "index.html"
+        }
+      },
+      {
+        "file": "_app/styl/404.min.styl",
+        "config": {
+          "customOutput": "css\\404.min.css"
+        }
+      },
+      {
+        "file": "_app/styl/ie.min.styl",
+        "config": {
+          "customOutput": "css\\ie.min.css"
         }
       },
       {
